<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/toolbarTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/switchCompat"
                android:text="@string/app_name"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:text="@string/Avoid_explicit"
                android:textColor="@color/White"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/to_start_with"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/faMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimaryDark"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_fab_label="@string/Choose_an_option"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_muscle"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="@color/White"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_showShadow="true"
        tools:ignore="RtlHardcoded">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/randomJokeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_muscle"
            fab:fab_label="@string/random_joke"
            fab:fab_size="mini"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimaryDark"
            fab:menu_colorRipple="#99FFFFFF" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/textInputItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_muscle"
            fab:fab_label="@string/text_input"
            fab:fab_size="mini"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimaryDark"
            fab:menu_colorRipple="#99FFFFFF" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/neverEndingJokeItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_muscle"
            fab:fab_label="@string/never_ending_joke_list"
            fab:fab_size="mini"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimaryDark"
            fab:menu_colorRipple="#99FFFFFF" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>